
2007-05-14  Chris Morley

	* src/obconversion.cpp(Read, Convert): Do not install a 
	FilteringInputStreambuf if stream already contains one. This
	solves my problem with multiple reads on the same input stream.
	 
2007-05-13  Chris Morley

	* src/obconversion.cpp(Read): Ensured that FilteringInputStreambuf
	is used. Previously it wasn't, which could cause errors
	except with unix reading unix files.
	 
2007-05-12  Noel O'Boyle <baoilleach@gmail.com>

	* SWIG interface files: Added template for vectors of strings
	* pybel.py: Added informats and outformats, dictionaries corresponding
	to the supported input and output formats

2007-05-11  Jean Brefort  <jean.brefort@normalesup.org>
	* include/openbabel/format.h: add missing new line (makes gcc happy).
	* include/openbabel/plugin.h: remove ClassName:: from method declaration.
	* src/formats/xml/cmlformat.cpp: ditto.

2007-05-10  Chris Morley

	* src/forcefields/forcefieldmmff94.cpp, .h: Mod for new plugin
	framework.
	Add return values to several functions, so that it would compile.

2007-05-10  Chris Morley

	Revision of plugin classes including OBFormat
	OBFormat, OBForcefield, OBFingerprint and the new
	OBDescriptor all derive from OBPlugin (not OBPluginiter)
	New files:
	include/openbabel/descriptor.h, include/openbabel/format.h
	include/openbabel/plugin.h, src/descriptor.cpp
	src/filters.cpp, src/format.cpp, src/plugin.cpp
	Removed file:
	include/openbabel/pluginiter.h
	Relocation of these and other files probably a good idea
	(incl new folder src/descriptors) but not done yet.
	class OBFormat moved out of obconversion.h, .cpp into
	its own files.

	* tools/babel.cpp: remove -F and add -L option

	* src/transform.cpp: reorganize to include new options
	--filter, --add, --delete

	* src/groupcontrib.cpp: remove OBLogP and similar classes;
	now descriptors which are instances of OBGroupContrib

	* src/formats/* : several forcefield and fingerprint files
	changed to fit new framework, obmolecformat.h to register