@@ -23,8 +23,10 @@
 #include <openbabel/ring.h>
 #include <openbabel/obconversion.h>
 #include <openbabel/oberror.h>
-#include <openbabel/pluginiter.h>
+#include <openbabel/plugin.h>
 #include <openbabel/fingerprint.h>
+#include <openbabel/descriptor.h>
+#include <openbabel/format.h>
 
 #include <openbabel/forcefield.h>
 
@@ -88,9 +90,7 @@ OpenBabel::OBUnitCell *toUnitCell(OpenBabel::OBGenericData *data) {
 %import <openbabel/bitvec.h>
 %import <openbabel/typer.h>
 
-%include <openbabel/pluginiter.h>
-%template (pluginiterFingerprint) OpenBabel::PluginIter<OpenBabel::OBFingerprint>;
-%template (pluginiterForceField) OpenBabel::PluginIter<OpenBabel::OBForceField>;
+%include <openbabel/plugin.h>
 
 %include <openbabel/oberror.h>
 %include <openbabel/obconversion.h>
@@ -103,7 +103,8 @@ OpenBabel::OBUnitCell *toUnitCell(OpenBabel::OBGenericData *data) {
 %include <openbabel/parsmart.h>
 
 %include <openbabel/fingerprint.h>
-
+%include <openbabel/format.h>
+%include <openbabel/descriptor.h>
 %include <openbabel/forcefield.h>
 
 # The following %ignores avoid warning messages due to shadowed classes.
